# helix

./: .gitignore  Cargo.toml  README.md  index.html  mkdocs.yml  requirements.txt
.github/workflows/: apt-deps.txt  build-examples.yml  publish-docs-dev.yml  publish-docs-release.yml  validate.yml
cpp/: helix.c
cpp/libultra/: os_cont.c
dev/: 404.html  index.html  sitemap.xml
dev/features/: index.html
dev/integrating/: index.html
dev/integration/: index.html
dev/search/: search_index.json
docs/: features.md  integrating.md  integration.md
docs/css/: app.css
examples/cpp/: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
examples/cpp/.github/workflows/: ci.yml
examples/cpp/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
examples/cpp/source/: lib.cpp  main.cpp
examples/cpp/test/: CMakeLists.txt
examples/cpp/test/source/: cpp_test.cpp
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
include/helix/: audio.h  controller.h  gamepad.h  gui.h  helix.h  internal.h  network.h  rcp.h  speech.h
include/libultra/: os.h  os_cont.h  os_message.h  os_thread.h  ultratypes.h
libultra/: os_cont.c
src/: audio.rs  controller.rs  controllers.rs  extensions.rs  fast3d.rs  gamepad.rs  graphics.rs  gui.rs  lib.rs  macros.rs  network.rs  speech.rs  speech_synthesizer.rs  utils.rs  window.rs
src/audio/: writer.rs
src/controller/: backends.rs  device.rs  hub.rs  types.rs
src/controller/backends/: giapi.rs
src/controllers/: backends.rs  controller.rs  device.rs  hub.rs  types.rs
src/controllers/backends/: gidevice.rs  gilrs.rs
src/extensions/: glam.rs  matrix.rs  wgpu.rs
src/fast3d/: gbi.rs  graphics.rs  rcp.rs  rdp.rs  rdp_c.rs  rsp.rs  utils.rs
src/fast3d/gbi/: defines.rs  f3d.rs  f3dex2.rs  f3dex2_c.rs  f3dex2e.rs  f3dzex2.rs  utils.rs
src/fast3d/graphics/: dummy_device.rs  extern_device.rs  opengl_device.rs  opengl_program.rs
src/fast3d/utils/: color.rs  color_combiner.rs  texture.rs  texture_cache.rs  tile.rs  tile_descriptor.rs
src/gamepad/: manager.rs  providers.rs  types.rs  utils.rs
src/gamepad/providers/: gilrs.rs  keyboard.rs
src/graphics/: gbi.rs  gfx_device.rs  rcp.rs  rdp.rs  rsp.rs  utils.rs
src/graphics/gbi/: defines.rs  f3dex2.rs  f3dex2_c.rs  utils.rs
src/graphics/utils/: color_combiner.rs  texture.rs  texture_cache.rs
src/gui/: glium_renderer.rs  gui_glium.rs  gui_opengl.rs  gui_wgpu.rs  imgui_sdl_support.rs  renderer.rs  wgpu_renderer.rs  windows.rs
src/gui/renderer/: glium_device.rs  opengl_device.rs  opengl_program.rs  wgpu_device.rs  wgpu_program.rs
src/speech_synthesizer/: av_speech_synthesizer.rs  sapi_speech-synthesizer.rs
