[package]
name = "helix"
version = "0.1.0"
edition = "2021"

[lib]
name = "helix"
crate-type = ["lib", "staticlib"]

[features]
default = ["f3dex2", "dummy_renderer"]

# Graphics Features
dummy_renderer = []
f3dex2 = []
f3dex2e = ["gbifloats", "f3dex2"]
f3dzex2 = ["f3dex2"]

gbifloats = []

# Additional Features
speech = ["dep:tts"]
network = ["dep:tokio"]

[dependencies]
anyhow = "1.0.70"
approx = "0.5.1"
arie = "0.1.0"
device_query = {  git = "https://github.com/dcvz/device_query.git", branch = "feature/macos-init-throw" }
env_logger = "0.10.0"
farbe = "0.2.0"
gilrs = { version = "0.10.2", features = ["serde", "serde-serialize"] }
glam = { git = "https://github.com/bitshifter/glam-rs.git", branch = "neon", features = ["approx"] }
imgui = { version = "0.11.0", features = ["docking"] }
imgui-winit-support = "0.11.0"
imgui-glow-renderer = "0.11.0"
winit = { version = "0.27.2", features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
libc = "0.2.139"
log = "0.4.17"
pollster = "0.3.0"
tokio = { version = "1.26.0", features = ["full"], optional = true }
tts = { version = "0.25.0", optional = true }
glutin = "0.29.1"
wgpu = "0.16.1"
