[package]
name = "helix"
version = "0.1.0"
edition = "2021"

[lib]
name = "helix"
crate-type = ["lib", "staticlib"]

[features]
default = ["f3dex2", "wgpu_renderer"]

# Graphics Features
f3dex2 = ["fast3d/f3dex2", "fast3d-gbi/f3dex2"]
f3dex2e = ["gbifloats", "f3dex2", "fast3d/f3dex2e", "fast3d-gbi/f3dex2e"]
f3dzex2 = ["f3dex2", "fast3d/f3dzex2"]

gbifloats = ["fast3d/gbifloats", "fast3d-gbi/gbifloats"]

# Renderer Backend
wgpu_renderer = ["wgpu", "imgui-wgpu", "fast3d-wgpu-renderer"]
opengl_renderer = ["glium", "glutin", "imgui-glium-renderer", "fast3d-glium-renderer"]

# Additional Features
speech = ["dep:tts"]
network = ["dep:tokio"]

[dependencies]
anyhow = "1.0.70"
env_logger = "0.10.0"
gilrs = { version = "0.10.2", features = ["serde", "serde-serialize"] }
glium = { version = "0.32.1", optional = true }
imgui = { version = "0.11.0", features = ["docking"] }
imgui-wgpu = { version = "0.23.0", optional = true }
imgui-winit-support = "0.11.0"
imgui-glium-renderer = { version = "0.11.0", optional = true }
winit = { version = "0.27.5", features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
libc = "0.2.139"
log = "0.4.17"
pollster = "0.3.0"
tokio = { version = "1.26.0", features = ["full"], optional = true }
tts = { version = "0.25.0", optional = true }
glutin = { version = "0.29.1", optional = true }
wgpu = { version = "0.16", optional = true }
spin_sleep = "1.1.1"
arie = "0.2.0"
fast3d = { version = "0.4.4", default-features = false }
fast3d-gbi = { version = "0.4.4", default-features = false }
fast3d-glium-renderer = { version = "0.4.4", optional = true }
fast3d-wgpu-renderer = { version = "0.4.4", optional = true }
rustc-hash = "1.1.0"

[patch.crates-io]
#fast3d = { path = "../../fast3d-rs/fast3d" }
#fast3d-gbi = { path = "../../fast3d-rs/fast3d-gbi" }
#fast3d-glium-renderer = { path = "../../fast3d-rs/fast3d-glium-renderer" }
#fast3d-wgpu-renderer = { path = "../../fast3d-rs/fast3d-wgpu-renderer" }
